--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
          NEWS
         </h2>
         <h4>
-          26/7/22 - <a href="./BTHEP-launch" target="_blank">Launch of the BIO-TECH-413 Human Experiment Project (BTHEP)!</a>
+          26/7/22 - <a href="./articles/BTHEP-launch" target="_blank">Launch of the BIO-TECH-413 Human Experiment Project (BTHEP)!</a>
         </h4>
       </div>
     </div>
